# VitalsSight-candidate-aware-rPPG

./: .env.controlled-trial.example  .gitattributes  .gitignore  README.md  RUN_VITALSSIGHT_MAC.command  THIRD_PARTY_NOTICES.md  package-lock.json  package.json  pyproject.toml  requirements-core.txt  requirements-deep.txt  requirements-dev.txt  requirements-multimodal.txt
.streamlit/: config.toml  secrets.toml.example
app/: api_server.py  legacy_research_dashboard.py  product_console.py  streamlit_app.py
configs/: product_refusal_policy_t57.json  t236_live_minimal_hgb_guard.json  t236_research_full_hgb_guard.json  t240_context_aware_high_hr_candidate.json  t307_frozen_reliability_protocol.json  t385_frozen_t382_policy_contract.json
docs/: ASSISTANT_PRODUCT_AND_SAFETY_SPEC.md  CONTROLLED_PILOT_GUIDE.md  CONTROLLED_TRIAL_OPERATIONS.md  CONTROLLED_TRIAL_PRODUCT_QA_20260717.md  DATA.md  LOCAL_ASSISTANT_SETUP.md  LOCAL_MODEL_UPGRADE_QA_REPORT_20260717.md  MACOS_NATIVE_APP_DELIVERY.md  MACOS_QUICK_START.md  MACOS_SEND_TO_MENTOR_CN.txt  MULTIMODAL_ASSISTANT.md  MULTIMODAL_QA_REPORT_20260717.md  NATIVE_APP_AND_SCALE_ROADMAP.md  PRIVACY_SECURITY_MODEL.md  PRODUCT_BENCHMARK_AND_COMPLETION.md  PRODUCT_FUNCTION_MATRIX_20260715.md  PRODUCT_QA_REPORT.md  REPORT_GOVERNANCE_AND_FHIR.md  REPRODUCIBILITY.md  UNIFIED_ASSISTANT_QA_20260718.md  controlled_trial_product_upgrade_plan.md  index.html
examples/: candidate_release_demo.py
packaging/: build_macos_app.py  macos_launcher.py
reproducibility/: headline_metrics.csv  protocol_summary.json
scripts/: run_assistant_eval.py  (+52 more)
(+137 files in other folders)
