[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "vitalssight"
version = "0.1.0"
description = "Candidate-aware camera-based heart-rate estimation with release/review outputs"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
  "numpy",
  "pandas",
  "scipy",
  "scikit-learn",
  "opencv-python",
  "pyyaml",
]

[project.optional-dependencies]
product = [
  "Authlib>=1.3.2",
  "fastapi",
  "mediapipe",
  "PyJWT[crypto]>=2.10",
  "plotly",
  "python-multipart",
  "reportlab",
  "streamlit",
  "uvicorn",
]
dev = [
  "httpx2",
  "pytest>=8",
]

[tool.setuptools.packages.find]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
